logs/Slang/generated/keywords/5.6.2--keyword_always_ff.sv.log
name: keyword_always_ff
description: The 'always_ff' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always_ff.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always_ff.sv:8:8: error: expected declarator
    bit always_ff;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_always_ff.sv:8:18: error: expected statement
    bit always_ff;
                 ^
